<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="button_rep">Find My Representatives</string>
    <string name="button_elect">Upcoming Elections</string>
    <string name="content_description_img">Logo Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="my_location">Use My Location</string>
    <string name="my_representative">Find My Representatives</string>
    <string name="representative_title">My Representatives</string>
    <string name="location_required_error">Location services must be enabled</string>
    <string name="address_line1">Address Line 1</string>
    <string name="address_line2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="error_message">Empty Field</string>
    <string name="rep_img">Representative Image</string>
    <string name="twitter_icon">Twitter Account</string>
    <string name="facebook_icon">Facebook Account</string>
    <string name="webpage_icon">Webpage</string>
    <string name="rep_search">Representative Search</string>
</resources>
