<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/representative_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}"
            app:srcCompat="@drawable/ic_profile"
            android:contentDescription="@string/rep_img"/>

        <TextView
            android:id="@+id/office_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@{representative.office.name}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toTopOf="@+id/representative_name"
            app:layout_constraintStart_toEndOf="@+id/representative_photo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="President of the United States" />

        <TextView
            android:id="@+id/representative_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{representative.official.name}"
            app:layout_constraintBottom_toTopOf="@+id/political_party"
            app:layout_constraintStart_toStartOf="@+id/office_name"
            app:layout_constraintTop_toBottomOf="@+id/office_name"
            tools:text="Joseph R. Biden" />

        <TextView
            android:id="@+id/political_party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/representative_name"
            app:layout_constraintTop_toBottomOf="@+id/representative_name"
            tools:text="Democratic Party" />

        <ImageView
            android:id="@+id/twitter_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_twitter"
            android:contentDescription="@string/twitter_icon" />

        <ImageView
            android:id="@+id/facebook_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twitter_icon"
            app:srcCompat="@drawable/ic_facebook"
            android:contentDescription="@string/facebook_icon" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginBottom="@dimen/small_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebook_icon"
            app:srcCompat="@drawable/ic_www"
            android:contentDescription="@string/webpage_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>